# mapnet

./: .gitignore  README.md  logmap_match_analysis.ipynb  pyproject.toml
dev/: download_raw_disease_reasources.py  subset_obo.py
mapnet/: __init__.py
mapnet/bertmap/: __init__.py  generate_bertmap_predictions.py  mesh_doid_setup.py  utils.py
mapnet/logmap/: matcher_run.sh  utils.py
mapnet/logmap/analysis/: matching_qc.py
mapnet/logmap/container/: Dockerfile
mapnet/logmap/output/: logmap2_mappings.owl  logmap2_mappings.rdf  logmap2_mappings.tsv  logmap2_mappings.txt  logmap_anchors.owl  logmap_anchors.rdf  logmap_anchors.tsv  logmap_anchors.txt  logmap_discarded_mappings.txt  logmap_hard_discarded_mappings.txt  logmap_overestimation.txt  module1_overlapping_logmap2.owl  module2_overlapping_logmap2.owl
mapnet/refinenet/: constants.py  dataset.py  inference.py  train.py  utils.py  weighted_trainer.py
mapnet/utils/: __init__.py  filtering.py  obo.py  robot.py  utils.py
mapnet/utils/configs/: disease_landscape.json  disease_landscape.py
scripts/: bertmap_run.py  download_raw_disease_reasources.py  generate_braod_narrow_dataset.py  generate_broad_narrow_dataset.py  generate_efo_chebi_mappings.py  generate_mondo_logmap_maps.py  get_novel_mondo.py  logmap_disease_landscape.py  logmap_doid_to_mesh.py  logmap_match_analysis.py  make_dataset_from_logmap_maps.py  refinenet_format_dataset.sh  refinenet_generate_synthetic_dataset.sh  refinenet_inference.sh  refinenet_run.sh  refinenet_train.sh  subset_obo.py
scripts/ontology_specfic/: efo-update.py
(+4 files in other folders)
